tests/ui/07-query-with-added.stderr
error: invalid query filter
 --> $DIR/07-query-with-added.rs:7:26
  |
7 | fn system(_: Query<&Foo, With<Added<Foo>>>) {}
  |                          ^^^^^^^^^^^^^^^^
  |
  = note: `With` should be used like `With<Component>
